legacy/cli/tests/snapshots/run_bun_test__bun__handles_process_exit_code_nonzero.snap
---
source: legacy/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:exitCodeNonZero
stdout
This should appear!
▪▪▪▪ bun:exitCodeNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task bun:exitCodeNonZero failed to run.
  ╰─▶ Process bun failed: exit code 1
