legacy/cli/tests/snapshots/run_bun_test__bun__handles_process_exit_nonzero.snap
---
source: legacy/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:processExitNonZero
stdout
▪▪▪▪ bun:processExitNonZero (100ms)
stderr
Error: task_runner::run_failed

  × Task bun:processExitNonZero failed to run.
  ╰─▶ Process bun failed: exit code 1
