legacy/cli/tests/snapshots/run_bun_test__bun__runs_self.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:version
1.1.3
▪▪▪▪ bun:version (100ms)

Tasks: 1 completed
 Time: 100ms
